@@ -20,6 +20,10 @@ Here is a history of user visible changes to Mailman.
 
   Bug fixes and other patches
 
+    - Subject prefixing could fail to collapse multiple 'Re:' in an incomming
+      message if they all came after the list's subject_prefix.  This is now
+      fixed.  (LP: #1496620)
+
     - Defended against a user submitting URLs with query fragments or POST
       data containing multiple occurrences of the same variable.
       (LP: #1496632)
